--- a/test/index.html
+++ b/test/index.html
@@ -13,8 +13,10 @@
             margin-top: 1.2rem;
             border-bottom: 1px #eee solid;
         }
+        #mocha {
+            min-height: 600px;
+        }
         .container {
-            margin-top: 600px;
             margin-bottom: 160px;
         }
     </style>
