--- a/test/index.html
+++ b/test/index.html
@@ -93,6 +93,7 @@
 <script src="spec/test.4.js"></script>
 <script src="spec/test.5.js"></script>
 <script src="spec/test.6.js"></script>
+<script src="spec/test.7.js"></script>
 <script src="helper/run.js"></script>
 </body>
 
