--- a/demo/index.html
+++ b/demo/index.html
@@ -78,7 +78,10 @@
          ) 的搜索建议插件。</p>
         <p>使用说明：<a href="../README.html" target="_blank">README.html</a> <a href="https://github.com/lzwme/bootstrap-suggest-plugin" target="_blank">Github</a></p>
 
-        <p>使用示例：<a href="https://github.com/lzwme/bootstrap-suggest-plugin/blob/master/demo/demo.js" target="_blank">demo.js</a></p>
+        <p>使用示例：
+            <a class="btn btn-info" href="https://github.com/lzwme/bootstrap-suggest-plugin/blob/master/demo/demo.js" target="_blank">demo.js</a>
+            <a class="btn btn-info" href="../test/" target="_blank">功能测试</a>
+        </p>
         <p id="bsVersion">
             <button class="btn btn-success btn-success-outline" data-version="3.3.6">bootstrap 3.3.6</button>
             <button class="btn btn-success btn-success-outline" data-version="4.0.0-alpha.2">bootstrap v4</button>
