新增 towWayMatch 配置项，用于设置是否双向匹配。默认为 true

--- a/test/index.html
+++ b/test/index.html
@@ -94,6 +94,7 @@
 <script src="spec/test.5.js"></script>
 <script src="spec/test.6.js"></script>
 <script src="spec/test.7.js"></script>
+<script src="spec/test.8.js"></script>
 <script src="helper/run.js"></script>
 </body>
 
