1. 中文输入法输入未结束时锁定搜索 2. 新增 delay 参数，用于自定义触发搜索的延时时间

--- a/demo/index.html
+++ b/demo/index.html
@@ -281,7 +281,7 @@ fnAdjustAjaxParam: function(keyword, opts) {
 }
 </pre>
 
-            <h3>淘宝搜索</h3>
+            <h3>淘宝搜索 <sub><a href="https://jsfiddle.net/renxia/2qafjffp/" target="_blank">试一试</a></sub></h3>
             <p>支持逗号分隔多关键字，并展示列表表头。</p>
             <div class="row">
                 <div class="col-lg-6">
