测试代码更新

--- a/test/index.html
+++ b/test/index.html
@@ -85,7 +85,7 @@
 <script src="../node_modules/mocha/mocha.js"></script>
 <script src="../node_modules/chai/chai.js"></script>
 
-<script src="helper/setup.js"></script>
+<script src="helper/init.js"></script>
 <script src="helper/helper-test.js"></script>
 <script src="spec/test.1.js"></script>
 <script src="spec/test.2.js"></script>
