fix: bootstrap 4.3.1 选择菜单错位修复 (#61)
close #61

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="这是一个基于 bootstrap 按钮式下拉菜单组件的搜索建议插件">
     <meta name="Keywords" content="Bootstrap Search Suggest,bootstrap,搜索建议插件">
     <meta name="author" content="http://lzw.me">
-    <link id="bscss" href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link id="bscss" href="//stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <style>
         h3{
             margin-top: 1.2rem;
@@ -74,8 +74,8 @@
     <div class="container">
         <h2>bootstrap combox 搜索建议插件</h2>
         <p>这是一个基于 bootstrap 按钮式下拉菜单组件 (
-        <a target="_blank" href="http://getbootstrap.com/components/#input-groups-buttons-dropdowns">V3</a> /
-        <a target="_blank" href="http://v4-alpha.getbootstrap.com/components/input-group/#buttons-with-dropdowns">V4</a>
+        <a target="_blank" href="https://getbootstrap.com/docs/3.4/components/#input-groups-buttons-dropdowns">V3</a> /
+        <a target="_blank" href="https://getbootstrap.com/docs/4.3/components/input-group/#buttons-with-dropdowns">V4</a>
          ) 的搜索建议插件。</p>
 
         <ul>
@@ -91,8 +91,8 @@
         </li>
         </ul>
         <p id="bsVersion">
-            <button class="btn btn-success btn-success-outline" data-version="3.3.7">bootstrap 3.3.7</button>
-            <button class="btn btn-success btn-success-outline" data-version="4.0.0-alpha.4">bootstrap v4</button>
+            <button class="btn btn-success btn-success-outline" data-version="3.4.1">bootstrap 3.4.1</button>
+            <button class="btn btn-success btn-success-outline" data-version="4.3.1">bootstrap v4.3.1</button>
         </p>
 
         <div>
@@ -317,9 +317,8 @@ fnAdjustAjaxParam: function(keyword, opts) {
             </p>
         </div>
     </div>
-    <script src="//cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
-    <script src="//cdn.bootcss.com/tether/1.2.0/js/tether.min.js"></script>
-    <script id="bsjs" src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script id="bsjs" src="//stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="../src/bootstrap-suggest.js"></script>
     <script src="demo.js?ver=20160422"></script>
 </body>
