fix: bootstrap v4 中清除按钮默认采用 font-awesome 图标

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,8 +9,9 @@
     <meta name="description" content="这是一个基于 bootstrap 按钮式下拉菜单组件的搜索建议插件">
     <meta name="Keywords" content="Bootstrap Search Suggest,bootstrap,搜索建议插件">
     <meta name="author" content="http://lzw.me">
-    <link id="bscss" href="//stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- cdnsite: https://cdnjs.com/ -->
+    <link id="bscss" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css" rel="stylesheet">
     <style>
         h3{
             margin-top: 1.2rem;
@@ -318,9 +319,9 @@ fnAdjustAjaxParam: function(keyword, opts) {
         </div>
     </div>
     <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script id="bsjs" src="//stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="../src/bootstrap-suggest.js"></script>
-    <script src="demo.js?ver=20160422"></script>
+    <script id="bsjs" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="../src/bootstrap-suggest.js?ver=201903271530"></script>
+    <script src="demo.js?ver=201903271530"></script>
 </body>
 
 </html>
