fix: input输入框的绑定事件名称增加私有标记，在销毁时只销毁私有标记的事件
feat: 增加maxOptionCount参数，用于配置选择列表最多显示的可选项数量。默认为 200

close #67

--- a/demo/index.html
+++ b/demo/index.html
@@ -113,7 +113,7 @@
             <div class="row">
                 <div class="col-lg-2">
                     <div class="input-group">
-                        <input type="text" class="form-control" id="test">
+                        <input type="text" class="form-control" id="test" placeholder="keywords...">
                         <div class="input-group-btn">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                                 <span class="caret"></span>
